# clusterexp

./: .gitignore  README.md  datasets_experiments.txt  pyproject.toml  requirements.txt
clusterexp/: UCR.ipynb  analyse_experiments_nb.ipynb  clustering_benchmark.ipynb  figure_paper.ipynb  plots.py  utils.py
clusterexp/res/: analysis_CVIs-artificial.json  analysis_CVIs-real-world.json  analysis_datasets-artificial.json  analysis_datasets-real-world.json
res/UCR/: all_datasets-UCR.txt  datasets_excluded-UCR.txt  datasets_experiments-UCR.txt  datasets_experiments_theory-UCR.txt
res/artificial/: datasets_excluded-artificial.txt  datasets_experiments-artificial.txt  datasets_experiments_theory-artificial.txt
res/real-world/: all_datasets-real-world.txt  datasets_excluded-real-world.txt  datasets_experiments-real-world.txt  datasets_experiments_theory-real-world.txt
scripts/: analyse_experiments.py  compute_scores_VI.py  filter_experiments.py  run_experiments.py  select_experiments.py
